--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,6 @@
-<h2 id="title">{{t 'home.greeting'}}</h2>
+<div class='row'>
+  <h2 class='text-center' id="greeting">{{t 'home.greeting'}}</h2>
+</div>
+<div class='row'>
+  <h4 class='text-center' id="secondary-greeting">{{t 'home.secondaryGreeting' countryName=countryName}}</h4>
+</div>
